--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
-  "homepage": "http://mywebsite.com/portfolio/",
+  "homepage": "http://mywebsite.com/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
